2000-09-18  Mathieu Lacage  <mathieu@eazel.com>

	* libgnomevfs/gnome-vfs-mime-info.c: 
	(ensure_user_directory_exist): add new function to create the 
	user's home directory ~/gnome/mime-info if it does not exists
	(write_back_mime_user_file), (write_back_keys_user_file): use
	this new function here.

2000-09-16  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 3042, Adding new mime type doesn't work
	
	* mime-type-capplet/nautilus-mime-type-capplet-dialogs.c:
	(nautilus_mime_type_capplet_show_new_mime_window):
	Return the new mime type if one was created
	
	* mime-type-capplet/nautilus-mime-type-capplet-dialogs.h:
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(nautilus_mime_type_capplet_update_info), (add_mime_clicked):
	Add info to main list.

2000-09-15  Gene Z. Ragan  <gzr@eazel.com>

	* data/mime/gnome-vfs.keys:
	Replaced EOG image component with the NautilusImageView
	
2000-09-15  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-backend.c: (gnome_vfs_backend_shutdown):
	Fixed a typo that crept in here a while back. It was preventing
	the shutdown code from running.

2000-09-15  Andy Hertzfeld  <andy@eazel.com>

	* data/mime/gnome-vfs.keys:
	fixed bug 1870, images files don't have the right icons when
	thumbnailing is turned off.  Fixed by defining icons in gnome-vfs.keys
	for all of the common image types.  I also defined icons for the
	common audio types while I was at it.
	
2000-09-15  Mathieu Lacage  <mathieu@eazel.com>

	* libgnomevfs/gnome-vfs-mime-info.c: (get_key_name),
	(gnome_vfs_get_registered_mime_types): fix bug 2759.
	no duplicates are returned anymore.

2000-09-15  Ali Abdin  <aliabdin@aucegypt.edu>

	* modules/pipe-method.c,
	* modules/translate-method.c:
	Added a comment at the top saying it is licensed under the LGPL and
	Copyright to Red Hat Inc. (I checked with Sopwith first)

	* AUTHORS:
	"help" method is in Nautilus, not gnome-vfs so we shouldn't mention it
	here.

2000-09-14  Mathieu Lacage  <mathieu@eazel.com>
